--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "postinstall": "husky install"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
